--- a/atlasbioinfo/package.json
+++ b/atlasbioinfo/package.json
@@ -8,11 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.4",
+    "quasar": "^2.12.0",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.3.3",
     "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.32.12",
     "vite": "^4.3.5"
   }
 }
